[workspace]
members = ["contracts/p256-test", "contracts/k256-test", "contracts/rsa-test", "contracts/ed25519-test", "contracts/schnorr-test"]
exclude = ["tests"]

[profile.release]
overflow-checks = true
opt-level = 3
panic = 'abort'
strip = true
lto = true

[profile.dev]
strip = true
opt-level = 1
debug = false
panic = 'abort'
debug-assertions = true