[package]
name = "ed25519-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = { version = "0.18.0", default-features = false, features = ["allocator", "dummy-atomic"]} 
ed25519-dalek = { version = "2.1.1", default-features = false, features = ["digest"] }
curve25519-dalek = { version = "4.1.2", default-features = false, features = ["digest"] }
hex-literal = "0.3"
sha2 = { version = "0.10", default-features = false }
