[package]
name = "k256-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = { version = "0.18.0", default-features = false, features = ["allocator", "dummy-atomic"]} 
k256 = { version = "=0.13.1", default-features = false, features = ["arithmetic", "ecdsa", "alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[features]
default = []
include_signing = []
